K8s_config/Namespace_defaults/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: test1
    pod-security.kubernetes.io/enforce: restricted
  name: test1
spec:
  finalizers:
    - kubernetes
