K8s_config/Namespace_defaults/test_pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
  annotations:
    checkov.io/skip1: CKV_K8S_14=Image Tag should be fixed - not latest or blank
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 10001
    seccompProfile:
      type: RuntimeDefault
  containers:
    - image: bitnami/nginx:latest
      imagePullPolicy: Always
      name: nginx
      resources:
        limits:
          cpu: 200m
          memory: 256Mi
        requests:
          cpu: 100m
          memory: 128Mi
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        failureThreshold: 1
        periodSeconds: 3
        timeoutSeconds: 3
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        failureThreshold: 1
        periodSeconds: 3
        timeoutSeconds: 3
      securityContext:
        readOnlyRootFilesystem: true
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
  restartPolicy: Always
